added typography to the css file

--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
             </figure>
 
             <div class="cu__info">
-              <p class="sm-text">Report for</p>
-              <p class="bg-text">Jeremy Robson</p>
+              <p class="sm-text info__key">Report for</p>
+              <p class="lg-text info__value">Jeremy Robson</p>
             </div>
           </div>
           <div class="cu--lower">
             <ul class="list">
-              <li class="list__el md-text">Daily</li>
-              <li class="list__el md-text">Weekly</li>
-              <li class="list__el md-text">Monty</li>
+              <li class="list__el md-text">
+                <button class="btn btn--option">Daily</button>
+              </li>
+              <li class="list__el md-text">
+                <button class="btn btn--option">Weekly</button>
+              </li>
+              <li class="list__el md-text">
+                <button class="btn btn--option">Montly</button>
+              </li>
             </ul>
           </div>
         </div>
@@ -49,7 +55,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="work-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="work-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="work-timeframe"></span> -
                 <span id="prev-work-hrs"></span>hours
@@ -74,7 +80,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="play-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="play-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="play-timeframe"></span> -
                 <span id="prev-play-hrs"></span>hours
@@ -99,7 +105,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="study-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="study-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="study-timeframe"></span> -
                 <span id="prev-study-hrs"></span>hours
@@ -124,7 +130,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="exercise-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="exercise-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="exercise-timeframe"></span> -
                 <span id="prev-exercise-hrs"></span>hours
@@ -149,7 +155,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="social-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="social-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="social-timeframe"></span> -
                 <span id="prev-social-hrs"></span>hours
@@ -174,7 +180,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours l-text"><span id="selfcare-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span id="selfcare-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="selfcare-timeframe"></span> -
                 <span id="prev-selfcare-hrs"></span>hours
@@ -185,7 +191,7 @@
       </div>
 
       <footer class="footer">
-        <p class="attribution">
+        <p class="xs-text attribution">
           Challenge by
           <a
             href="https://www.frontendmentor.io/challenges/time-tracking-dashboard-UIQ7167Jw"
