finished styling on mobile css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="card card--stat cs--work">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Work</p>
               <button class="btn">
@@ -55,7 +55,7 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span id="work-hrs"></span>hrs</p>
+              <p class="hours xl-text">40<span id="work-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="work-timeframe"></span> -
                 <span id="prev-work-hrs"></span>hours
@@ -65,7 +65,7 @@
         </div>
 
         <div class="card card--stat cs--play">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Play</p>
               <button class="btn">
@@ -90,7 +90,7 @@
         </div>
 
         <div class="card card--stat cs--study">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Study</p>
               <button class="btn">
@@ -115,7 +115,7 @@
         </div>
 
         <div class="card card--stat cs--exercise">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Exercise</p>
               <button class="btn">
@@ -133,14 +133,14 @@
               <p class="hours xl-text"><span id="exercise-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span id="exercise-timeframe"></span> -
-                <span id="prev-exercise-hrs"></span>hours
+                <span id="prev-exercise-hrs">30</span>hours
               </p>
             </div>
           </div>
         </div>
 
         <div class="card card--stat cs--social">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Social</p>
               <button class="btn">
@@ -165,7 +165,7 @@
         </div>
 
         <div class="card card--stat cs--self-care">
-          <div class="cs--data">
+          <div class="cs__data">
             <div class="data__top">
               <p class="activity md-text">Self Care</p>
               <button class="btn">
