solved button bug

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <p class="hours xl-text"><span class="hrs" id="exercise-hrs"></span>hrs</p>
               <p class="previous sm-text">
                 Last <span class="timeframe" id="exercise-timeframe"></span> -
-                <span class="prev-hrs" id="exercise-prev-hrs">30</span>hours
+                <span class="prev-hrs" id="exercise-prev-hrs"></span>hours
               </p>
             </div>
           </div>
