--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="work-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="work-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="work-timeframe"></span> -
-                <span class="prev-hrs" id="work-prev-hrs"></span>hours
+                Last <span class="timeframe" id="work-timeframe">Day</span> -
+                <span class="prev-hrs" id="work-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
@@ -80,10 +80,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="play-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="play-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="play-timeframe"></span> -
-                <span class="prev-hrs" id="play-prev-hrs"></span>hours
+                Last <span class="timeframe" id="play-timeframe">Day</span> -
+                <span class="prev-hrs" id="play-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
@@ -105,10 +105,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="study-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="study-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="study-timeframe"></span> -
-                <span class="prev-hrs" id="study-prev-hrs"></span>hours
+                Last <span class="timeframe" id="study-timeframe">Day</span> -
+                <span class="prev-hrs" id="study-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
@@ -130,10 +130,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="exercise-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="exercise-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="exercise-timeframe"></span> -
-                <span class="prev-hrs" id="exercise-prev-hrs"></span>hours
+                Last <span class="timeframe" id="exercise-timeframe">Day</span> -
+                <span class="prev-hrs" id="exercise-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
@@ -155,10 +155,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="social-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="social-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="social-timeframe"></span> -
-                <span class="prev-hrs" id="social-prev-hrs"></span>hours
+                Last <span class="timeframe" id="social-timeframe">Day</span> -
+                <span class="prev-hrs" id="social-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
@@ -180,10 +180,10 @@
             </div>
 
             <div class="data__bottom">
-              <p class="hours xl-text"><span class="hrs" id="selfcare-hrs"></span>hrs</p>
+              <p class="hours xl-text"><span class="hrs" id="selfcare-hrs">0</span>hrs</p>
               <p class="previous sm-text">
-                Last <span class="timeframe" id="selfcare-timeframe"></span> -
-                <span class="prev-hrs" id="selfcare-prev-hrs"></span>hours
+                Last <span class="timeframe" id="selfcare-timeframe">Day</span> -
+                <span class="prev-hrs" id="selfcare-prev-hrs">0</span>hours
               </p>
             </div>
           </div>
